# documentation/openapi.yaml
@@ -54,6 +54,8 @@ components:
   schemas:
     User:
       $ref: "./schema/User.yaml"
+    GetUserResponse:
+      $ref: "./schema/GetUserResponse.yaml"
     UserResponse:
       $ref: "./schema/UserResponse.yaml"
     Class:
@@ -112,12 +114,19 @@ paths:
                 properties:
                   message:
                     type: string
+                    default: "Confirmation email sent"
                     description: "仮登録完了メッセージ"
                   user:
                     type: string
+                    format: uuid
                     description: "仮登録したユーザのID"
         "400":
           description: "すでに登録されているユーザ"
+          content:
+            application/json:
+              schema:
+                type: string
+                default: "このメールアドレスはすでに登録されています。"
         "500":
           description: "Internal server error"
 
@@ -137,9 +146,15 @@ paths:
                 properties:
                   message:
                     type: string
+                    default: "アカウントが認証されました。"
                     description: "アカウント認証成功メッセージ"
         400:
           description: "無効なトークン"
+          content:
+            application/json:
+              schema:
+                type: string
+                default: "無効なトークンです。"
         500:
           description: "Internal server error."
       parameters:
@@ -156,19 +171,19 @@ paths:
         - "auth"
       summary: "User login"
       description: "ログインする際に呼ばれるAPI"
-      parameters:
-        - in: body
-          name: body
+      requestBody:
           required: true
-          schema:
-            type: object
-            properties:
-              email:
-                type: string
-                description: "User's email"
-              password:
-                type: string
-                description: "User's password"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  email:
+                    type: string
+                    description: "User's email"
+                  password:
+                    type: string
+                    description: "User's password"
       responses:
         200:
           description: "ログイン成功"
@@ -183,3 +198,384 @@ paths:
           description: "ユーザが存在しない"
         500:
           description: "Internal server error."
+  
+  /:
+    post:
+      tags:
+        - "class"
+      summary: "クラスを登録する"
+      description: "unknown"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Class"
+      responses:
+        200:
+          description: "正常にクラス登録を完了"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Class"
+        500:
+          description: "Internal server error"
+
+    get:
+      tags:
+        - "class"
+      summary: "クラス一覧を取得する"
+      description: "クラス一覧を取得する"
+      responses:
+        200:
+          description: "正常にクラス一覧を取得"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Class"
+        500:
+          description: "Internal server error"
+
+  /{id}:
+    put:
+      tags:
+        - "class"
+      summary: "パスパラメータで受け取ったUserIdのクラスを更新する"
+      description: "Classスキーマの内容をbodyで受け取り、変更がある箇所を一括更新する"
+      parameters:
+        - name: id
+          in: path
+          description: "Userに紐づいたClassId"
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        200:
+          description: "正常にクラスを更新完了"
+          content:
+            application/json:
+              schema:
+                type: string
+                default: "クラスが更新されました"
+        403:
+          description: "権限がない"
+          content:
+            application/json:
+              schema:
+                type: string
+                default: "クラスを更新できません"
+        500:
+          description: "Internal server error"
+  
+    delete:
+      tags:
+        - "class"
+      summary: "パスパラメータで受け取ったUserIdのクラスを削除する"
+      description: "Classスキーマの内容をbodyで受け取り、対象のクラス情報を削除する"
+      deprecated: false
+      parameters:
+        - name: id
+          in: path
+          description: "Userに紐づいたClassId"
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        200:
+          description: "正常にクラス情報を削除"
+          content:
+            application/json:
+              schema:
+                type: string
+                default: "クラスが削除されました"
+        403:
+          description: "権限がない"
+          content:
+            application/json:
+              schema:
+                type: string
+                default: "クラスを削除できません"
+        500:
+          description: "Internal server error"
+
+    get:
+      tags:
+        - "class"
+      summary: "特定のクラスの取得"
+      description: "パスパラメータで受け取ったUserIdのクラス情報を取得する"
+      parameters:
+        - name: id
+          in: path
+          description: "Userに紐づいたClassId"
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        200:
+          description: "正常にクラス情報を取得"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Class"
+        403:
+          description: "権限がない"
+          content:
+            application/json:
+              schema:
+                type: string
+                default: "クラスを取得できません"
+        500:
+          description: "Internal server error"
+
+  /{userId}:
+    get:
+      tags:
+        - "user"
+      summary: "ユーザー情報を取得"
+      description: "パスパラメータで受け取ったUserIdのユーザー情報を取得する"
+      parameters:
+        - name: id
+          in: path
+          description: "UserId"
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        200:
+          description: "正常にユーザー情報を取得"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GetUserResponse"
+        500:
+          description: "Internal server error"
+
+    put:
+      tags:
+        - "user"
+      summary: "ユーザー情報を更新"
+      description: 
+        "パスパラメータで受け取ったUserIdのユーザー情報を更新する
+        ユーザー情報の更新は、ユーザー自身のみが行える"
+      parameters:
+        - name: id
+          in: path
+          description: "UserId"
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        200:
+          description: "正常にユーザー情報を更新"
+          content:
+            application/json:
+              schema:
+                type: string
+                default: "アカウントが更新されました"
+        403:
+          description: "権限がない"
+          content:
+            application/json:
+              schema:
+                type: string
+                default: "アカウントを更新できません"
+        500:
+          description: "Internal server error"
+
+    delete:
+      deprecated: false
+      tags:
+        - "user"
+      summary: "アカウントを削除"
+      description: 
+        "パスパラメータで受け取ったUserIdのアカウントを削除する
+        アカウントの削除は、ユーザー自身のみが行える"
+      parameters:
+        - name: id
+          in: path
+          description: "UserId"
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        200:
+          description: "正常にアカウントを削除"
+          content:
+            application/json:
+              schema:
+                type: string
+                default: "アカウントが削除されました"
+        403:
+          description: "権限がない"
+          content:
+            application/json:
+              schema:
+                type: string
+                default: "アカウントを削除できません"
+        500:
+          description: "Internal server error"
+
+  /{userId}/follow:
+    put:
+      tags:
+        - "user"
+      summary: "ユーザーをフォロー"
+      description: 
+        "パスパラメータで受け取ったUserIdのユーザーをフォローする
+        bodyのほうが自分 pramsのほうが相手"
+      parameters:
+        - name: id
+          in: path
+          description: "UserId"
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        200:
+          description: "正常にユーザーをフォロー"
+          content:
+            application/json:
+              schema:
+                type: string
+                default: "フォローしました"
+        403:
+          description: "すでにフォローしている、もしくは自分をフォローしようとしている"
+          content:
+            application/json:
+              schema:
+                type: string
+                default: "フォロー済みです | 自分をフォローすることはできません"
+        500:
+          description: "Internal server error"
+  
+  /{userId}/unfollow:
+    put:
+      tags:
+        - "user"
+      summary: "ユーザーのフォローを解除"
+      description: 
+        "パスパラメータで受け取ったUserIdのユーザーのフォローを解除する
+        bodyのほうが自分 pramsのほうが相手"
+      parameters:
+        - name: id
+          in: path
+          description: "UserId"
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        200:
+          description: "正常にユーザーのフォローを解除"
+          content:
+            application/json:
+              schema:
+                type: string
+                default: "フォローを解除しました"
+        403:
+          description: "すでにフォローしていない、もしくは自分をフォロー解除しようとしている"
+          content:
+            application/json:
+              schema:
+                type: string
+                default: "フォロー解除済みです。 | 自分をフォロー解除できません"
+        500:
+          description: "Internal server error"
+      
+  /joinClass:
+    put:
+      tags:
+        - "user"
+      summary: "クラスに参加する"
+      description: "クラステーブルにユーザーを追加する"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/User"
+      responses:
+        200:
+          description: "正常にクラスに参加"
+          content:
+            application/json:
+              schema:
+                type: object
+                default: { message: 'Classmate added successfully' }
+        500:
+          description: "Internal server error"
+
+  /{subjectId}:
+    put:
+      tags:
+        - "subject"
+      summary: "科目を更新する"
+      description: "bodyで受け取ったSubjectスキーマの内容を更新する"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Subject"
+      responses:
+        200:
+          description: "正常に科目登録を完了"
+          content:
+            application/json:
+              schema:
+                type: string
+                default: "Subjectを編集しました。"
+        500:
+          description: "Internal server error"
+  
+    delete:
+      tags:
+        - "subject"
+      summary: "科目を削除する"
+      description: "bodyで受け取ったSubjectスキーマの内容を削除する"
+      deprecated: false
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Subject"
+      responses:
+        200:
+          description: "正常に科目を削除"
+          content:
+            application/json:
+              schema:
+                type: string
+                default: "Subjectを削除しました。"
+        500:
+          description: "Internal server error"      
+
+  /name/{:subjectName}:
+    delete:
+      deprecated: false
+      tags:
+        - "subject"
+      summary: "科目名を指定して削除する"
+      description: "パスパラメータで受け取ったsubjectNameの科目を削除する"
+      responses:
+        200:
+          description: "正常に科目を削除"
+          content:
+            application/json:
+              schema:
+                type: string
+                default: "Subjectを削除しました。"
+        500:
+          description: "Internal server error"
